// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-664"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-668 makeStyles-root-665 makeStyles-root-667"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-678 makeStyles-input-666"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-684 makeStyles-noShrink-685"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root-1 MuiBox-root-2"
>
  <div
    className="MuiBox-root-1 MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Full Width
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root-21 MuiFab-root-33 makeStyles-root-29 MuiFab-extended-37 makeStyles-extended-30 MuiFab-secondary-36 makeStyles-secondary-32 MuiFab-sizeSmall-41 makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label-34"
      >
        <div
          className="MuiBox-root-1 MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root-1 MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root-54 MuiTypography-subtitle2-66 MuiTypography-colorTextPrimary-79 makeStyles-weight-52 makeStyles-weight-53"
          >
            Download
          </h6>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-94 MuiBox-root-95"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-99"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root-94 MuiBox-root-131"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-132"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-133"
    />
  </div>,
  <div
    className="MuiBox-root-94 MuiBox-root-134"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-135"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-136"
    />
  </div>,
  <div
    className="MuiBox-root-94 MuiBox-root-137"
  >
    <p
      className="MuiTypography-root-100 MuiTypography-body1-102 makeStyles-weight-98 makeStyles-weight-138"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-94 MuiBox-root-139"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root-140 MuiBox-root-141"
>
  <div
    className="MuiBox-root-140 MuiBox-root-142"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-143"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root-140 MuiBox-root-148"
  >
    <div
      className="MuiBox-root-140 MuiBox-root-149"
    >
      <img
        alt="Download"
        className="makeStyles-root-143"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-150 MuiBox-root-151"
>
  <div
    className="MuiBox-root-150 MuiBox-root-152"
  >
    <h4
      className="MuiTypography-root-157 MuiTypography-h4-165 MuiTypography-colorPrimary-180 makeStyles-weight-155 makeStyles-weight-156 makeStyles-inline-153"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-157 MuiTypography-h4-165 makeStyles-weight-155 makeStyles-weight-187 makeStyles-inline-153"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-150 MuiBox-root-188"
  >
    <h6
      className="MuiTypography-root-157 MuiTypography-h6-167 makeStyles-weight-155 makeStyles-weight-189"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-150 MuiBox-root-190"
  />
  <div
    className="MuiBox-root-150 MuiBox-root-191"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-192"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-197 MuiBox-root-198"
  >
    <label
      className="MuiFormControlLabel-root-199"
    >
      <span
        className="MuiSwitch-root-205"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-229 MuiIconButton-root-220 PrivateSwitchBase-root-216 MuiSwitch-switchBase-208 MuiSwitch-colorPrimary-209"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-228"
          >
            <span
              className="MuiSwitch-thumb-214"
            />
            <input
              className="PrivateSwitchBase-input-219 MuiSwitch-input-213"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-215"
        />
      </span>
      <span
        className="MuiTypography-root-232 MuiTypography-body1-234 MuiFormControlLabel-label-204"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-197 MuiBox-root-262"
  >
    <label
      className="MuiFormControlLabel-root-199"
    >
      <span
        className="MuiSwitch-root-205"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-229 MuiIconButton-root-220 PrivateSwitchBase-root-216 MuiSwitch-switchBase-208 MuiSwitch-colorPrimary-209"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-228"
          >
            <span
              className="MuiSwitch-thumb-214"
            />
            <input
              className="PrivateSwitchBase-input-219 MuiSwitch-input-213"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-215"
        />
      </span>
      <span
        className="MuiTypography-root-232 MuiTypography-body1-234 MuiFormControlLabel-label-204"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-376 MuiBox-root-377"
  >
    <div
      className="MuiBox-root-376 MuiBox-root-378"
    >
      <div
        className="MuiBox-root-376 MuiBox-root-379"
      >
        <button
          className="MuiButtonBase-root-397 MuiButton-root-380 MuiButton-contained-388 MuiButton-containedPrimary-389"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-381"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-404 MuiTypography-body1-406 makeStyles-weight-402 makeStyles-weight-403"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-404 MuiTypography-body2-405 MuiPaper-root-445 MuiPaper-elevation6-453 MuiSnackbarContent-root-442 makeStyles-info-436"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-443"
        >
          <div
            className="MuiBox-root-376 MuiBox-root-472 makeStyles-message-440"
          >
            <div
              className="makeStyles-iconBackground-441"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-473"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-404 MuiTypography-subtitle1-415 makeStyles-info-436 makeStyles-weight-402 makeStyles-weight-478"
            >
              Hi INFO this is a cool feature. Stay tuned
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-444"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-397 MuiIconButton-root-479 MuiIconButton-colorSecondary-484"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-487"
            >
              <img
                alt="Close"
                className="makeStyles-root-473"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-376 MuiBox-root-488"
    >
      <div
        className="MuiBox-root-376 MuiBox-root-489"
      >
        <button
          className="MuiButtonBase-root-397 MuiButton-root-380 MuiButton-contained-388 MuiButton-containedPrimary-389"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-381"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-404 MuiTypography-body1-406 makeStyles-weight-402 makeStyles-weight-490"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-404 MuiTypography-body2-405 MuiPaper-root-445 MuiPaper-elevation6-453 MuiSnackbarContent-root-442 makeStyles-warning-437"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-443"
        >
          <div
            className="MuiBox-root-376 MuiBox-root-491 makeStyles-message-440"
          >
            <div
              className="makeStyles-iconBackground-441"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-473"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-404 MuiTypography-subtitle1-415 makeStyles-warning-437 makeStyles-weight-402 makeStyles-weight-492"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-444"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-397 MuiIconButton-root-479 MuiIconButton-colorSecondary-484"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-487"
            >
              <img
                alt="Close"
                className="makeStyles-root-473"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-376 MuiBox-root-493"
    >
      <div
        className="MuiBox-root-376 MuiBox-root-494"
      >
        <button
          className="MuiButtonBase-root-397 MuiButton-root-380 MuiButton-contained-388 MuiButton-containedPrimary-389"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-381"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-404 MuiTypography-body1-406 makeStyles-weight-402 makeStyles-weight-495"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-404 MuiTypography-body2-405 MuiPaper-root-445 MuiPaper-elevation6-453 MuiSnackbarContent-root-442 makeStyles-error-435"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-443"
        >
          <div
            className="MuiBox-root-376 MuiBox-root-496 makeStyles-message-440"
          >
            <div
              className="makeStyles-iconBackground-441"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-473"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-404 MuiTypography-subtitle1-415 makeStyles-error-435 makeStyles-weight-402 makeStyles-weight-497"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-444"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-397 MuiIconButton-root-479 MuiIconButton-colorSecondary-484"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-487"
            >
              <img
                alt="Close"
                className="makeStyles-root-473"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-273 MuiBox-root-274"
  >
    <div
      className="makeStyles-container-276"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-279"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-273 MuiBox-root-284"
  >
    <p
      className="MuiTypography-root-289 MuiTypography-body1-291 makeStyles-weight-287 makeStyles-weight-288 makeStyles-inline-285"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-276"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-279"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-322"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-323 MuiTypography-h4-331 makeStyles-weight-321 makeStyles-weight-353"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-354"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-323 MuiTypography-h5-332 makeStyles-weight-321 makeStyles-weight-355"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-356"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-h6-333 makeStyles-weight-321 makeStyles-weight-357"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-358"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-323 MuiTypography-body1-325 makeStyles-weight-321 makeStyles-weight-359"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-360"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-323 MuiTypography-body2-324 makeStyles-weight-321 makeStyles-weight-361"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-362"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 makeStyles-weight-321 makeStyles-weight-363"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-364"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle2-335 makeStyles-weight-321 makeStyles-weight-365"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle1-334 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-366"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle2-335 MuiTypography-colorPrimary-346 makeStyles-weight-321 makeStyles-weight-367 makeStyles-inline-319"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-323 MuiTypography-subtitle2-335 makeStyles-weight-321 makeStyles-weight-368 makeStyles-inline-319"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-509 MuiFormControl-marginNormal-510 MuiTextField-root-508"
  >
    <label
      className="MuiFormLabel-root-525 MuiInputLabel-root-513 MuiInputLabel-formControl-519 MuiInputLabel-animated-522 MuiInputLabel-shrink-521"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-545 MuiOutlinedInput-root-532 MuiInputBase-formControl-546"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-561 MuiOutlinedInput-notchedOutline-539"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="PrivateNotchedOutline-legend-562"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-555 MuiOutlinedInput-input-540"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-563 MuiBox-root-564"
  >
    <div
      className="makeStyles-dropdown-565"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-545 makeStyles-root-566 makeStyles-root-568"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-555 makeStyles-input-567"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-569 makeStyles-noShrink-570"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-591 MuiButtonBase-disabled-592 MuiButton-root-574 MuiButton-contained-582 MuiButton-containedPrimary-583 MuiButton-disabled-586"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-575"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-594 MuiBox-root-595"
>
  <div
    className="MuiBox-root-594 MuiBox-root-596"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-598 MuiFormControl-marginNormal-599 MuiTextField-root-597"
      >
        <label
          className="MuiFormLabel-root-614 MuiFormLabel-error-617 MuiInputLabel-error-605 MuiInputLabel-root-602 MuiInputLabel-formControl-608 MuiInputLabel-animated-611 MuiInputLabel-shrink-610"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-634 MuiOutlinedInput-root-621 MuiInputBase-error-640 MuiOutlinedInput-error-626 MuiInputBase-formControl-635"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline-628"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-644 MuiOutlinedInput-input-629"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-652 MuiFormHelperText-contained-656 MuiFormHelperText-error-653"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-594 MuiBox-root-660"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-598 MuiFormControl-marginNormal-599 MuiTextField-root-597"
      >
        <label
          className="MuiFormLabel-root-614 MuiInputLabel-root-602 MuiInputLabel-formControl-608 MuiInputLabel-animated-611 MuiInputLabel-shrink-610"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-634 MuiOutlinedInput-root-621 MuiInputBase-formControl-635"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline-628"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-644 MuiOutlinedInput-input-629"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-594 MuiBox-root-661"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-598 MuiFormControl-marginNormal-599 MuiTextField-root-597"
      >
        <label
          className="MuiFormLabel-root-614 MuiFormLabel-disabled-616 MuiInputLabel-disabled-604 MuiInputLabel-root-602 MuiInputLabel-formControl-608 MuiInputLabel-animated-611 MuiInputLabel-shrink-610"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-634 MuiOutlinedInput-root-621 MuiInputBase-disabled-637 MuiOutlinedInput-disabled-623 MuiInputBase-formControl-635"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline-628"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-644 MuiOutlinedInput-input-629 MuiInputBase-disabled-637 MuiOutlinedInput-disabled-623"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-594 MuiBox-root-662"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-598 MuiFormControl-marginNormal-599 MuiTextField-root-597"
      >
        <label
          className="MuiFormLabel-root-614 MuiInputLabel-root-602 MuiInputLabel-formControl-608 MuiInputLabel-animated-611 MuiInputLabel-shrink-610"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-634 MuiOutlinedInput-root-621 MuiInputBase-formControl-635"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline-628"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-644 MuiOutlinedInput-input-629"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-594 MuiBox-root-663"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-598 MuiFormControl-marginNormal-599 MuiTextField-root-597"
      >
        <label
          className="MuiFormLabel-root-614 MuiFormLabel-filled-618 MuiInputLabel-root-602 MuiInputLabel-formControl-608 MuiInputLabel-animated-611 MuiInputLabel-shrink-610"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-634 MuiOutlinedInput-root-621 MuiInputBase-formControl-635 MuiInputBase-multiline-642 MuiOutlinedInput-multiline-627"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-650 MuiOutlinedInput-notchedOutline-628"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-651"
              style={
                Object {
                  "width": 0,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <textarea
            aria-invalid={false}
            className="MuiInputBase-input-644 MuiOutlinedInput-input-629 MuiInputBase-inputMultiline-646 MuiOutlinedInput-inputMultiline-631"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={5}
            value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-696 MuiBox-root-697"
  id="/account"
>
  <div
    className="MuiBox-root-696 MuiBox-root-698"
  >
    <h4
      className="MuiTypography-root-703 MuiTypography-h4-711 MuiTypography-colorPrimary-726 makeStyles-weight-701 makeStyles-weight-702 makeStyles-inline-699"
    >
      Account
    </h4>
    <h4
      className="MuiTypography-root-703 MuiTypography-h4-711 makeStyles-weight-701 makeStyles-weight-733 makeStyles-inline-699"
    >
       
      Status
    </h4>
  </div>
  <div
    className="MuiBox-root-696 MuiBox-root-734"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-696 MuiBox-root-735"
      >
        <h6
          className="MuiTypography-root-703 MuiTypography-subtitle2-715 makeStyles-weight-701 makeStyles-weight-736"
        >
          Available accounts
        </h6>
      </div>
      <div
        className="makeStyles-dropdown-737"
        onClick={[Function]}
      >
        <div
          className="MuiInputBase-root-741 makeStyles-root-738 makeStyles-root-740"
          onClick={[Function]}
          role="button"
        >
          <input
            autoComplete="off"
            className="MuiInputBase-input-751 makeStyles-input-739"
            name="SELECT_FIELD_ATTR"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
        <img
          alt="Phone Menu"
          className="makeStyles-root-757 makeStyles-noShrink-758"
          height="5"
          src="selectChevron.svg"
          width="8"
        />
      </div>
    </form>
    <div
      className="MuiBox-root-696 MuiBox-root-762"
    />
    <div
      className="MuiBox-root-696 MuiBox-root-763"
    >
      <nav
        className="MuiList-root-764 MuiList-padding-765"
      >
        <div
          className="MuiBox-root-696 MuiBox-root-768"
        >
          <li
            className="MuiListItem-root-769 MuiListItem-gutters-776"
            disabled={false}
          >
            <div
              className="MuiListItemText-root-780"
            >
              <p
                className="MuiTypography-root-703 MuiTypography-body1-705 makeStyles-weight-701 makeStyles-weight-786"
              >
                Transations
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root-696 MuiBox-root-787"
        />
        <div
          className="MuiBox-root-696 MuiBox-root-791"
        />
        <li
          className="MuiListItem-root-769 MuiListItem-gutters-776 makeStyles-center-789"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root-792 makeStyles-empty-788"
          >
            <img
              alt="No Transations"
              className="makeStyles-root-757"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root-780 makeStyles-text-790"
          >
            <span
              className="MuiTypography-root-703 MuiTypography-body1-705 MuiListItemText-primary-784"
            >
              No Transations
            </span>
          </div>
        </li>
      </nav>
    </div>
    <div
      className="MuiBox-root-696 MuiBox-root-793"
    >
      <nav
        className="MuiList-root-764 MuiList-padding-765"
      >
        <div
          className="MuiBox-root-696 MuiBox-root-794"
        >
          <li
            className="MuiListItem-root-769 MuiListItem-gutters-776"
            disabled={false}
          >
            <div
              className="MuiListItemText-root-780"
            >
              <p
                className="MuiTypography-root-703 MuiTypography-body1-705 makeStyles-weight-701 makeStyles-weight-795"
              >
                Pending Transactions
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root-696 MuiBox-root-796"
        />
        <div
          className="MuiBox-root-696 MuiBox-root-797"
        />
        <li
          className="MuiListItem-root-769 MuiListItem-gutters-776 makeStyles-center-789"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root-792 makeStyles-empty-788"
          >
            <img
              alt="No Pending Transactions"
              className="makeStyles-root-757"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root-780 makeStyles-text-790"
          >
            <span
              className="MuiTypography-root-703 MuiTypography-body1-705 MuiListItemText-primary-784"
            >
              No Pending Transactions
            </span>
          </div>
        </li>
      </nav>
    </div>
  </div>
  <div
    className="MuiBox-root-696 MuiBox-root-798"
  />
  <div
    className="MuiBox-root-696 MuiBox-root-799"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-757"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-807 MuiBox-root-808"
  id="/login"
>
  <div
    className="MuiBox-root-807 MuiBox-root-809"
  >
    <h4
      className="MuiTypography-root-814 MuiTypography-h4-822 MuiTypography-colorPrimary-837 makeStyles-weight-812 makeStyles-weight-813 makeStyles-inline-810"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-814 MuiTypography-h4-822 makeStyles-weight-812 makeStyles-weight-844 makeStyles-inline-810"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root-807 MuiBox-root-845"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-807 MuiBox-root-846"
      >
        <div
          className="MuiFormControl-root-848 MuiFormControl-marginNormal-849 MuiFormControl-fullWidth-851 MuiTextField-root-847"
        >
          <div
            className="MuiInputBase-root-865 MuiOutlinedInput-root-852 MuiInputBase-fullWidth-874 MuiInputBase-formControl-866"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-881 MuiOutlinedInput-notchedOutline-859"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-882"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-875 MuiOutlinedInput-input-860"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-807 MuiBox-root-883"
      >
        <div
          className="MuiBox-root-807 MuiBox-root-884"
        >
          <button
            className="MuiButtonBase-root-902 MuiButtonBase-disabled-903 MuiButton-root-885 MuiButton-contained-893 MuiButton-containedPrimary-894 MuiButton-disabled-897 MuiButton-fullWidth-901"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-886"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-807 MuiBox-root-905"
    >
      <div
        className="MuiBox-root-807 MuiBox-root-906"
      >
        <a
          href="/restore-account"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-814 MuiTypography-subtitle2-826 MuiTypography-colorPrimary-837 makeStyles-weight-812 makeStyles-weight-907 makeStyles-inline-810 makeStyles-link-811"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-807 MuiBox-root-908"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-814 MuiTypography-subtitle2-826 MuiTypography-colorPrimary-837 makeStyles-weight-812 makeStyles-weight-909 makeStyles-inline-810 makeStyles-link-811"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-807 MuiBox-root-910"
  />
  <div
    className="MuiBox-root-807 MuiBox-root-911"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-912"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-917 MuiBox-root-918"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-917 MuiBox-root-919"
  >
    <h4
      className="MuiTypography-root-924 MuiTypography-h4-932 MuiTypography-colorPrimary-947 makeStyles-weight-922 makeStyles-weight-923 makeStyles-inline-920"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-924 MuiTypography-h4-932 makeStyles-weight-922 makeStyles-weight-954 makeStyles-inline-920"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-917 MuiBox-root-955"
  >
    <div
      className="MuiBox-root-917 MuiBox-root-956"
    >
      <h6
        className="MuiTypography-root-924 MuiTypography-subtitle2-936 makeStyles-weight-922 makeStyles-weight-957"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root-917 MuiBox-root-958"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root-973 MuiFab-root-963 makeStyles-root-959 MuiFab-extended-967 makeStyles-extended-960 MuiFab-secondary-966 makeStyles-secondary-962 MuiFab-sizeSmall-971 makeStyles-sizeSmall-961"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label-964"
        >
          <div
            className="MuiBox-root-917 MuiBox-root-976"
          >
            <img
              alt="Download"
              className="makeStyles-root-977"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root-917 MuiBox-root-982"
          >
            <h6
              className="MuiTypography-root-924 MuiTypography-subtitle2-936 MuiTypography-colorTextPrimary-949 makeStyles-weight-922 makeStyles-weight-983"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-917 MuiBox-root-984"
    >
      <p
        className="MuiTypography-root-924 MuiTypography-body1-926 makeStyles-weight-922 makeStyles-weight-985 makeStyles-inline-920"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-917 MuiBox-root-986"
    >
      <div
        className="MuiBox-root-917 MuiBox-root-987"
      >
        <button
          className="MuiButtonBase-root-973 MuiButton-root-988 MuiButton-text-990 MuiButton-textPrimary-991 MuiButton-fullWidth-1004"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-989"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-917 MuiBox-root-1005"
  />
  <div
    className="MuiBox-root-917 MuiBox-root-1006"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-977"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Restore Account Restore 1`] = `
<div
  className="MuiBox-root-1017 MuiBox-root-1018"
  id="/restore-account"
>
  <div
    className="MuiBox-root-1017 MuiBox-root-1019"
  >
    <h4
      className="MuiTypography-root-1024 MuiTypography-h4-1032 MuiTypography-colorPrimary-1047 makeStyles-weight-1022 makeStyles-weight-1023 makeStyles-inline-1020"
    >
      Restore
    </h4>
    <h4
      className="MuiTypography-root-1024 MuiTypography-h4-1032 makeStyles-weight-1022 makeStyles-weight-1054 makeStyles-inline-1020"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1017 MuiBox-root-1055"
  >
    <h6
      className="MuiTypography-root-1024 MuiTypography-subtitle1-1035 makeStyles-weight-1022 makeStyles-weight-1056 makeStyles-inline-1020"
    >
      Restore your account with your recovery words. Enter your recovery words here.
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1017 MuiBox-root-1057"
      >
        <div
          className="MuiFormControl-root-1059 MuiFormControl-marginNormal-1060 MuiFormControl-fullWidth-1062 MuiTextField-root-1058"
        >
          <div
            className="MuiInputBase-root-1076 MuiOutlinedInput-root-1063 MuiInputBase-fullWidth-1085 MuiInputBase-formControl-1077 MuiInputBase-multiline-1084 MuiOutlinedInput-multiline-1069"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1092 MuiOutlinedInput-notchedOutline-1070"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1093"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <textarea
              aria-invalid={false}
              className="MuiInputBase-input-1086 MuiOutlinedInput-input-1071 MuiInputBase-inputMultiline-1088 MuiOutlinedInput-inputMultiline-1073"
              disabled={false}
              name="recoveryPhraseField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Recovery phrase"
              required={false}
              rows={5}
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1017 MuiBox-root-1094"
      >
        <div
          className="MuiBox-root-1017 MuiBox-root-1095"
        >
          <button
            className="MuiButtonBase-root-1113 MuiButton-root-1096 MuiButton-text-1098 MuiButton-textPrimary-1099 MuiButton-fullWidth-1112"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1097"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1017 MuiBox-root-1116"
        >
          <button
            className="MuiButtonBase-root-1113 MuiButton-root-1096 MuiButton-contained-1104 MuiButton-containedPrimary-1105 MuiButton-fullWidth-1112"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1097"
            >
              Restore
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1017 MuiBox-root-1117"
  />
  <div
    className="MuiBox-root-1017 MuiBox-root-1118"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1119"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-1134 MuiBox-root-1135"
  id="/signup1"
>
  <div
    className="MuiBox-root-1134 MuiBox-root-1136"
  >
    <h4
      className="MuiTypography-root-1141 MuiTypography-h4-1149 MuiTypography-colorPrimary-1164 makeStyles-weight-1139 makeStyles-weight-1140 makeStyles-inline-1137"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1141 MuiTypography-h4-1149 makeStyles-weight-1139 makeStyles-weight-1171 makeStyles-inline-1137"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1134 MuiBox-root-1172"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1134 MuiBox-root-1173"
      >
        <div
          className="MuiFormControl-root-1175 MuiFormControl-marginNormal-1176 MuiFormControl-fullWidth-1178 MuiTextField-root-1174"
        >
          <label
            className="MuiFormLabel-root-1191 MuiFormLabel-required-1196 MuiInputLabel-required-1183 MuiInputLabel-root-1179 MuiInputLabel-formControl-1185 MuiInputLabel-animated-1188 MuiInputLabel-shrink-1187"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-1197 MuiInputLabel-asterisk-1184"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1211 MuiOutlinedInput-root-1198 MuiInputBase-fullWidth-1220 MuiInputBase-formControl-1212"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1227 MuiOutlinedInput-notchedOutline-1205"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1228"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1221 MuiOutlinedInput-input-1206"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1134 MuiBox-root-1229"
      >
        <div
          className="MuiFormControl-root-1175 MuiFormControl-marginNormal-1176 MuiFormControl-fullWidth-1178 MuiTextField-root-1174"
        >
          <label
            className="MuiFormLabel-root-1191 MuiFormLabel-required-1196 MuiInputLabel-required-1183 MuiInputLabel-root-1179 MuiInputLabel-formControl-1185 MuiInputLabel-animated-1188 MuiInputLabel-shrink-1187"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-1197 MuiInputLabel-asterisk-1184"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1211 MuiOutlinedInput-root-1198 MuiInputBase-fullWidth-1220 MuiInputBase-formControl-1212"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1227 MuiOutlinedInput-notchedOutline-1205"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1228"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1221 MuiOutlinedInput-input-1206"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1134 MuiBox-root-1230"
      >
        <div
          className="MuiFormControl-root-1175 MuiFormControl-marginNormal-1176 MuiFormControl-fullWidth-1178 MuiTextField-root-1174"
        >
          <label
            className="MuiFormLabel-root-1191 MuiFormLabel-required-1196 MuiInputLabel-required-1183 MuiInputLabel-root-1179 MuiInputLabel-formControl-1185 MuiInputLabel-animated-1188 MuiInputLabel-shrink-1187"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-1197 MuiInputLabel-asterisk-1184"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1211 MuiOutlinedInput-root-1198 MuiInputBase-fullWidth-1220 MuiInputBase-formControl-1212"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1227 MuiOutlinedInput-notchedOutline-1205"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1228"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1221 MuiOutlinedInput-input-1206"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1134 MuiBox-root-1231"
      >
        <div
          className="MuiBox-root-1134 MuiBox-root-1232"
        >
          <button
            className="MuiButtonBase-root-1250 MuiButton-root-1233 MuiButton-text-1235 MuiButton-textPrimary-1236 MuiButton-fullWidth-1249"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1234"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1134 MuiBox-root-1253"
        >
          <button
            className="MuiButtonBase-root-1250 MuiButtonBase-disabled-1251 MuiButton-root-1233 MuiButton-contained-1241 MuiButton-containedPrimary-1242 MuiButton-disabled-1245 MuiButton-fullWidth-1249"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-1234"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1134 MuiBox-root-1254"
  />
  <div
    className="MuiBox-root-1134 MuiBox-root-1255"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1256"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1271 MuiBox-root-1272"
  id="/signup2"
>
  <div
    className="MuiBox-root-1271 MuiBox-root-1273"
  >
    <h4
      className="MuiTypography-root-1278 MuiTypography-h4-1286 MuiTypography-colorPrimary-1301 makeStyles-weight-1276 makeStyles-weight-1277 makeStyles-inline-1274"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1278 MuiTypography-h4-1286 makeStyles-weight-1276 makeStyles-weight-1308 makeStyles-inline-1274"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1271 MuiBox-root-1309"
  >
    <div
      className="MuiBox-root-1271 MuiBox-root-1310"
    >
      <div
        className="MuiBox-root-1271 MuiBox-root-1311"
      >
        <div
          className="MuiBox-root-1271 MuiBox-root-1312"
        >
          <h6
            className="MuiTypography-root-1278 MuiTypography-subtitle2-1290 makeStyles-weight-1276 makeStyles-weight-1313 makeStyles-inline-1274"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1315"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1318"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1323"
      >
        <span
          className="MuiSwitch-root-1329"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1353 MuiIconButton-root-1344 PrivateSwitchBase-root-1340 MuiSwitch-switchBase-1332 MuiSwitch-colorPrimary-1333"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1352"
            >
              <span
                className="MuiSwitch-thumb-1338"
              />
              <input
                className="PrivateSwitchBase-input-1343 MuiSwitch-input-1337"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1339"
          />
        </span>
        <span
          className="MuiTypography-root-1278 MuiTypography-body1-1280 MuiFormControlLabel-label-1328"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1271 MuiBox-root-1356"
    >
      <p
        className="MuiTypography-root-1278 MuiTypography-body1-1280 makeStyles-weight-1276 makeStyles-weight-1357 makeStyles-inline-1274"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-1271 MuiBox-root-1358"
    >
      <div
        className="MuiBox-root-1271 MuiBox-root-1359"
      >
        <button
          className="MuiButtonBase-root-1353 MuiButton-root-1360 MuiButton-text-1362 MuiButton-textPrimary-1363 MuiButton-fullWidth-1376"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1361"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1271 MuiBox-root-1377"
      >
        <button
          className="MuiButtonBase-root-1353 MuiButton-root-1360 MuiButton-contained-1368 MuiButton-containedPrimary-1369 MuiButton-fullWidth-1376"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1361"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1271 MuiBox-root-1378"
  />
  <div
    className="MuiBox-root-1271 MuiBox-root-1379"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1318"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1390 MuiBox-root-1391"
  id="/signup3"
>
  <div
    className="MuiBox-root-1390 MuiBox-root-1392"
  >
    <h4
      className="MuiTypography-root-1397 MuiTypography-h4-1405 MuiTypography-colorPrimary-1420 makeStyles-weight-1395 makeStyles-weight-1396 makeStyles-inline-1393"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1397 MuiTypography-h4-1405 makeStyles-weight-1395 makeStyles-weight-1427 makeStyles-inline-1393"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1390 MuiBox-root-1428"
  >
    <h6
      className="MuiTypography-root-1397 MuiTypography-subtitle1-1408 makeStyles-weight-1395 makeStyles-weight-1429 makeStyles-inline-1393"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1390 MuiBox-root-1430"
      >
        <div
          className="MuiFormControl-root-1432 MuiFormControl-marginNormal-1433 MuiFormControl-fullWidth-1435 MuiTextField-root-1431"
        >
          <div
            className="MuiInputBase-root-1449 MuiOutlinedInput-root-1436 MuiInputBase-fullWidth-1458 MuiInputBase-formControl-1450"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1465 MuiOutlinedInput-notchedOutline-1443"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1466"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1459 MuiOutlinedInput-input-1444"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1390 MuiBox-root-1467"
      >
        <div
          className="MuiBox-root-1390 MuiBox-root-1468"
        >
          <button
            className="MuiButtonBase-root-1486 MuiButton-root-1469 MuiButton-text-1471 MuiButton-textPrimary-1472 MuiButton-fullWidth-1485"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1470"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1390 MuiBox-root-1489"
        >
          <button
            className="MuiButtonBase-root-1486 MuiButton-root-1469 MuiButton-contained-1477 MuiButton-containedPrimary-1478 MuiButton-fullWidth-1485"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1470"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1390 MuiBox-root-1490"
  />
  <div
    className="MuiBox-root-1390 MuiBox-root-1491"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1492"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1507 MuiBox-root-1508"
  id="/welcome"
>
  <div
    className="MuiBox-root-1507 MuiBox-root-1509"
  >
    <h4
      className="MuiTypography-root-1514 MuiTypography-h4-1522 MuiTypography-colorPrimary-1537 makeStyles-weight-1512 makeStyles-weight-1513 makeStyles-inline-1510"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1514 MuiTypography-h4-1522 makeStyles-weight-1512 makeStyles-weight-1544 makeStyles-inline-1510"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1507 MuiBox-root-1545"
  >
    <p
      className="MuiTypography-root-1514 MuiTypography-body1-1516 makeStyles-weight-1512 makeStyles-weight-1546 makeStyles-inline-1510"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1507 MuiBox-root-1547"
    />
    <button
      className="MuiButtonBase-root-1565 MuiButton-root-1548 MuiButton-contained-1556 MuiButton-containedPrimary-1557 MuiButton-fullWidth-1564"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1549"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1507 MuiBox-root-1568"
    />
    <button
      className="MuiButtonBase-root-1565 MuiButton-root-1548 MuiButton-contained-1556 MuiButton-containedPrimary-1557 MuiButton-fullWidth-1564"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1549"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1507 MuiBox-root-1569"
    />
    <button
      className="MuiButtonBase-root-1565 MuiButton-root-1548 MuiButton-contained-1556 MuiButton-containedPrimary-1557 MuiButton-fullWidth-1564"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1549"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1507 MuiBox-root-1570"
  />
  <div
    className="MuiBox-root-1507 MuiBox-root-1571"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1572"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
